// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`should run a simple workflow 1`] = `
{
  "output": "hello world",
  "status": "completed",
}
`;

exports[`should run a workflow with one tool 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 3,
      "b": 2,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should run a workflow with one tool 2`] = `
{
  "output": 5,
  "status": "completed",
}
`;

exports[`should run a workflow with multiple tools 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": "hello",
      "b": " ",
    },
    "tool": "concat",
    "type": "tool",
  },
}
`;

exports[`should run a workflow with multiple tools 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": "hello ",
      "b": "world",
    },
    "tool": "concat",
    "type": "tool",
  },
}
`;

exports[`should run a workflow with multiple tools 3`] = `
{
  "output": "hello world",
  "status": "completed",
}
`;

exports[`should handle a failing workflow 1`] = `
{
  "error": "test error",
  "status": "failed",
}
`;

exports[`should handle failing after a tool call 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 3,
      "b": 2,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should handle failing after a tool call 2`] = `
{
  "error": "failed after tool",
  "status": "failed",
}
`;

exports[`should support tool calls in step functions 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 5,
      "b": 10,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should support tool calls in step functions 2`] = `
{
  "output": 15,
  "status": "completed",
}
`;

exports[`should support multiple tool calls in step functions 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 3,
      "b": 5,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should support multiple tool calls in step functions 2`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 8,
      "b": 10,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should support multiple tool calls in step functions 3`] = `
{
  "output": 18,
  "status": "completed",
}
`;

exports[`should support mixing regular and generator steps 1`] = `
{
  "next": [Function: AsyncFunction],
  "status": "pending",
  "throw": [Function: AsyncFunction],
  "tool": {
    "input": {
      "a": 5,
      "b": 100,
    },
    "tool": "add",
    "type": "tool",
  },
}
`;

exports[`should support mixing regular and generator steps 2`] = `
{
  "output": 210,
  "status": "completed",
}
`;

exports[`should handle errors in generator steps 1`] = `
{
  "error": "error in generator step",
  "status": "failed",
}
`;
